# rizom_scripts

./: .gitignore  README.md  pyproject.toml
lua/: selectIslands.lua
python/: reset.py  reset_uvmaps.py  scale_selected_islands.py  select_islands.py  select_islands_by_area.py  select_islands_by_bbox_size.py  select_islands_by_pixel_size.py  select_islands_from_edges.py
rizom_scripts/: select_islands.py
